@@ -487,6 +487,21 @@ to &lt;javadoc&gt; using <tt>classpath</tt>, <tt>classpathref</tt> attributes or
     <td align="center" valign="top">all</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">docfilessubdirs</td>
+    <td valign="top">Enables deep-copying of <code>doc-files</code>
+      subdirectories.  Defaults to false. <em>since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">1.4</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">excludedocfilessubdir</td>
+    <td valign="top">Colon-separated list of <code>doc-files</code>'
+      subdirectories to exclude if <code>docfilessubdirs</code> is
+      true. <em>since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">1.4</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h4><a name="groupattribute">Format of the group attribute</a></h4>
